# stock-pandas

./: .coveragerc  .gitignore  .readthedocs.yml  .ruff.toml  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/workflows/: python.yml  release.yml
docs/: LICENSE  README.md  conf.py
example/: README.md  bollinger_bands.ipynb  moving_averages.ipynb  tencent.csv  tencent_full.csv
src/: errors.rs  lib.rs  simd.rs
src/directive/: cache.rs  mod.rs  parser.rs  tokenizer.rs  types.rs
src/indicators/: mod.rs  overbought_oversold.rs  support_resistance.rs  tools.rs  trend_following.rs
stock_pandas/: __init__.py  backend.py  column.py  command_presets.py  commands.py  common.py  dataframe.py  date.py  directive.py  exceptions.py  indicators.py  meta.py  mutations.py  operators.py  parser.py  properties.py  series.py  time_frame.py  utils.py
stock_pandas/commands/: __init__.py  args.py  base.py  common.py  over_bought_or_sold.py  support_and_resistance.py  tools.py  trend_following.py
stock_pandas/cumulative/: __init__.py  cumulator.py  date.py  time_frame.py
stock_pandas/directive/: __init__.py  cache.py  command.py  commands.py  factory.py  node.py  operator.py  operators.py  parse.py  parser.py  syntax.bnf  syntax.ebnf  tokenizer.py  types.py
stock_pandas/math/: _lib.pyi  _lib.pyx  ewma.py  ma.py
stock_pandas/meta/: __init__.py  cumulator.py  date.py  manager.py  time_frame.py  utils.py
test/: common.py  test_append.py  test_backend.py  test_basic.py  test_benchmark.py  test_class.py  test_column_info.py  test_column_parser.py  test_commands.py  test_commands_after_append.py  test_cum_append.py  test_directive.py  test_extend.py  test_factory.py  test_fulfill.py  test_indexing.py  test_indicators.py  test_manipulate.py  test_parse.py  test_parser.py  test_rolling_calc.py  test_slicing.py  test_stock_pandas.py  test_stockstats.py  test_super_methods.py  test_time_frame.py  test_tokenizer.py  test_truncated.py
