[package]
name = "stock_pandas_rs"
version = "5.3.0"
edition = "2021"
authors = ["Kael Zhang <i+pypi@kael.me>"]
description = "High-performance Rust implementation for stock-pandas indicators and directive parsing"
license = "MIT"
homepage = "https://github.com/kaelzhang/stock-pandas"
repository = "https://github.com/kaelzhang/stock-pandas"

[lib]
name = "stock_pandas_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
numpy = "0.25"
ndarray = "0.16"
thiserror = "1.0"
regex = "1.10"
once_cell = "1.19"

# SIMD support
wide = "0.7"

[features]
default = []
# Enable this feature to skip building the extension module
extension-module = ["pyo3/extension-module"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
