[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = 'stock-pandas'
version = '5.0.0'
description='The production-ready subclass of `pandas.DataFrame` to support stock statistics and indicators.'
readme = 'docs/README.md'
authors = [
  { name = 'Kael Zhang', email='i+pypi@kael.me' }
]
license = 'MIT'
license-files = ['LICENSE']
requires-python = '>=3.10'
dependencies = [
  "numpy>=2.0.0",
  "pandas >= 1.0.0"
]
classifiers=[
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Rust',
    'Programming Language :: Python :: Implementation :: CPython',
    'Natural Language :: English',
    'Intended Audience :: Developers',
    'Intended Audience :: Financial and Insurance Industry',
    'Operating System :: OS Independent',
    'Development Status :: 4 - Beta',
    'Topic :: Utilities'
]

[project.urls]
Homepage = "https://github.com/kaelzhang/stock-pandas"

[project.optional-dependencies]
dev = [
  "coverage",
  "ruff",
  "pytest",
  "pytest-cov",
  "pytest-benchmark",
  "twine",
  "numpy>=2.0.0",
  "mypy",
  "maturin>=1.4"
]

[tool.maturin]
# Module name (the Rust crate creates stock_pandas_rs module)
module-name = "stock_pandas_rs"
# Binding type
binding = "pyo3"
# Features to activate
features = ["pyo3/extension-module"]
# Python package to include
python-packages = ["stock_pandas"]

[tool.mypy]
warn_return_any = true
ignore_missing_imports = true
no_implicit_optional = true
strict_optional = true
disable_error_code = ['return-value', 'no-any-return']
